--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+body {background-color: #74EBD5;
+    background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+    
 
 }
