--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 .nav-item:hover {
     cursor: pointer;
     background-color: aqua;
-    color: chartreuse;
+    color: blueviolet;
 }
 
 
