--- a/style.css
+++ b/style.css
@@ -24,4 +24,18 @@ header {
 }
 
 
+section{
+    width: 100%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 2%;
+}
+
+.moldura_videos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+
 
